objects/Revision_Reason__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Does_Change_Impact_Benefit_Booklets__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Revision Impacts Benefit Booklets You MUST Revisit The Benefit Booklet Questions And Detail Change In The Description Of Revision.</inlineHelpText>
        <label>Does Change Impact Benefit Booklets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_Change_Impact_SBCs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Revision Impacts SBC You MUST Revisit The SBC Questions And Detail Change In The Description Of Revision.</inlineHelpText>
        <label>Does Change Impact SBCs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacted_Packages_Suffixes_Sections__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impacted Pkgs/Suffixes/Sections/CCodes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreWork_Type__c</fullName>
        <description>This is used in WF rule &quot;WF_Revision_Reason_Impacted Packages_Default_N/A&quot; to check the Prework type, If PW type = RFP, then the field &quot;Impacted Packages/Suffixes/Sections&quot; should be defaulted to &quot;N/A&quot;</description>
        <formula>TEXT(Revision__r.Implementation_Case_Id__r.Pre_Implementation_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreWork Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Reasons__c</fullName>
        <label>Revision Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Setup Form Revised</fullName>
                </value>
                <value>
                    <fullName>Benefit Change</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner Change</fullName>
                </value>
                <value>
                    <fullName>Effective Date Change</fullName>
                </value>
                <value>
                    <fullName>HPCC code incorrect in Sales Tool</fullName>
                    <label>HPCC Code Incorrect In Sales Tool</label>
                </value>
                <value>
                    <fullName>Other Attachments</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Rate Change</fullName>
                </value>
                <value>
                    <fullName>Selections Report Attached</fullName>
                </value>
                <value>
                    <fullName>Selections Report Revised</fullName>
                </value>
                <value>
                    <fullName>Waiting Period Change</fullName>
                </value>
                <value>
                    <fullName>WGS Rate Sheet Attached</fullName>
                </value>
                <value>
                    <fullName>WGS Rate Sheet Revised</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Type__c</fullName>
        <label>Revision Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Benefits Not Coded Per BPD</fullName>
                </value>
                <value>
                    <fullName>Clarification Based On Discovery Call</fullName>
                </value>
                <value>
                    <fullName>Client Request Change After Original Intake</fullName>
                </value>
                <value>
                    <fullName>Documents Attached</fullName>
                </value>
                <value>
                    <fullName>EBA Interpretation</fullName>
                </value>
                <value>
                    <fullName>Internal Change Request</fullName>
                </value>
                <value>
                    <fullName>Late Client Decision</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Renewal Changes On Migration</fullName>
                </value>
                <value>
                    <fullName>Revision to Pre-Renewal</fullName>
                </value>
                <value>
                    <fullName>Pre-Renewal to Finalized Renewal</fullName>
                </value>
                <value>
                    <fullName>Revision to Finalized Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <referenceTo>Impl_Revision__c</referenceTo>
        <relationshipLabel>Revision Reason</relationshipLabel>
        <relationshipName>Revision_Reason</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Revision Reason</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REVRSN-{0000}</displayFormat>
        <label>Revision Reason ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revision Reason</pluralLabel>
    <recordTypes>
        <fullName>Reason_LockAll</fullName>
        <active>true</active>
        <label>Reason LockAll</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reason_ReadOnly</fullName>
        <active>true</active>
        <label>Reason ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revision_Reason_Renewal_CROC</fullName>
        <active>true</active>
        <label>Revision Reason</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revision_Reason_Sales</fullName>
        <active>true</active>
        <label>Revision Reason Sales</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>